{
    "name": "PlayerInput3",
    "maps": [
        {
            "name": "Player",
            "id": "a72f29ac-a746-4848-bd65-90bb609ebded",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "736c8ae9-af69-440f-b6ef-f9933b64d6f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "cd39a44a-9adc-4dea-9ad2-791d8200a50c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "db4cb9b9-5c98-496f-8671-4ef907571734",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "d5f58e47-b3e4-4176-8802-8410a3416c97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,MultiTap",
                    "initialStateCheck": true
                },
                {
                    "name": "Power",
                    "type": "Button",
                    "id": "2e0c747c-8187-4233-9f15-80ca0cd16cf9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "460bb49b-5101-4fcf-aac9-28b389496e72",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f6760f98-75c9-4f02-84d7-0d7b1851423f",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ff5dffd2-d960-4544-b349-bbb4a33ee395",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a608b015-a4ae-4019-8d74-54eee02efcc6",
                    "path": "<Keyboard>/i",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d64deba5-6896-40ec-9ca5-1592bd2ad0e2",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e35a8ec4-edcd-467f-b985-72dd867fa97b",
                    "path": "<Keyboard>/k",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53d329de-f9e6-4b7f-80b4-3e693eb9c041",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}